fix chips margin issue on mobile view

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -6166,6 +6166,7 @@ a.waves-effect .waves-ripple {
     margin: 16px 0; }
 
 .chip {
+  margin: 2px 0;
   display: inline-block;
   height: 32px;
   font-size: 13px;
