--- a/sass/components/_chips.scss
+++ b/sass/components/_chips.scss
@@ -1,4 +1,5 @@
 .chip {
+  margin: 2px 0;
   display: inline-block;
   height: 32px;
   font-size: 13px;
